Add new data to modals

--- a/index.html
+++ b/index.html
@@ -43,30 +43,154 @@ layout: default
           <div class="col-md-4 hidden-xs hidden-s" id="modal-image"></div>
         </div>
 
-        <div class="row modal-bottom">
-          <div class="col-md-12">
-            <div class="row">
-              <div class="col-md-12 get-sm">
-                <h4 id="owner-header"></h4>
-                <div id="owner-subsection"></div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-md-12">
-                <h4 id="community-header"></h4>
-                <div id="community-subsection"></div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-md-12 get-sm">
-                <h4 id="production-header"></h4>
-                <div id="production-subsection"></div>
-              </div>
-            </div>
+        <div class="row">
+          <div class="col-md-12 get-sm">
+            <h3><br><u>Location</u></h3>
           </div>
         </div>
+        <div class="row">
+          <div class="col-md-12 get-sm">
+            <h4 id="commarea-header"></h4>
+            <div id="commarea-subsection"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 get-sm">
+            <h4 id="ward-header"></h4>
+            <div id="ward-subsection"></div>
+          </div>
+        </div>
+
+      <div class="row modal-bottom">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h3><br><u>About</u></h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="owner-header"></h4>
+              <div id="owner-subsection"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="support-header"></h4>
+              <div id="support-subsection"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="types-header"></h4>
+              <div id="types-subsection"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="description-header"></h4>
+              <div id="description-subsection"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="dormant-header"></h4>
+              <div id="dormant-subsection"></div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h3><br><u>Features</u></h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="production-header"></h4>
+              <div id="production-subsection"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <h4 id="community-header"></h4>
+              <div id="community-subsection"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="commtype-header"></h4>
+              <div id="commtype-subsection"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="fence-header"></h4>
+              <div id="fence-subsection"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="locked-header"></h4>
+              <div id="locked-subsection"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="water-header"></h4>
+              <div id="water-subsection"></div>
+            </div>
+          </div>    
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="compost-header"></h4>
+              <div id="compost-subsection"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="seasonex-header"></h4>
+              <div id="seasonex-subsection"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="structures-header"></h4>
+              <div id="structures-subsection"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="animal-header"></h4>
+              <div id="animal-subsection"></div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h3 id="with_contact"></h3>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="contact-header"></h4>
+              <div id="contact-subsection"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="website-header"></h4>
+              <div id="website-subsection"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h4 id="facebook-header"></h4>
+              <div id="facebook-subsection"></div>
+            </div>
+          </div>
+
+        </div>
+      </div>
       </div>
     </div>
   </div>
