--- a/index.html
+++ b/index.html
@@ -16,15 +16,6 @@ layout: default
   }
 </style>
 
-<style id="carto-result-style2">
-  #carto-result2 {
-    polygon-opacity: 0.2;
-    line-color: #155600;
-    line-width: 0.9;
-    line-opacity: 0.8;
-  }
-</style>
-
 <div class="modal fade bd-example-modal-md" id="modal-pop" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-md">
     <div class="modal-content">
@@ -45,7 +36,7 @@ layout: default
 
         <div class="row">
           <div class="col-md-12 get-sm">
-            <h3><br><u>Location</u></h3>
+            <h3><br><strong><u>Location</u></strong></h3>
           </div>
         </div>
         <div class="row">
@@ -65,7 +56,7 @@ layout: default
         <div class="col-md-12">
           <div class="row">
             <div class="col-md-12 get-sm">
-              <h3><br><u>About</u></h3>
+              <h3><br><strong><u>About</u></strong></h3>
             </div>
           </div>
           <div class="row">
@@ -101,7 +92,7 @@ layout: default
 
           <div class="row">
             <div class="col-md-12 get-sm">
-              <h3><br><u>Features</u></h3>
+              <h3><br><strong><u>Features</u></strong></h3>
             </div>
           </div>
           <div class="row">
