--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@ layout: default
   }
 </style>
 
+<style id="carto-overlay-style">
+  #carto-overlay {
+    polygon-line-color: '#000';
+    line-width: 1.7;
+    line-opacity: 1;
+  }
+</style>
+
 <div class="modal fade bd-example-modal-md" id="modal-pop" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-md">
     <div class="modal-content">
@@ -34,11 +42,11 @@ layout: default
           <div class="col-md-4 hidden-xs hidden-s" id="modal-image"></div>
         </div>
 
-        <div class="row">
-          <div class="col-md-12 get-sm">
-            <h3><br><strong><u>Location</u></strong></h3>
+          <div class="row">
+            <div class="col-md-12 get-sm">
+              <h3 id="with_location"></h3>
+            </div>
           </div>
-        </div>
         <div class="row">
           <div class="col-md-12 get-sm">
             <h4 id="commarea-header"></h4>
@@ -56,7 +64,7 @@ layout: default
         <div class="col-md-12">
           <div class="row">
             <div class="col-md-12 get-sm">
-              <h3><br><strong><u>About</u></strong></h3>
+              <h3 id="with_about"></h3>
             </div>
           </div>
           <div class="row">
@@ -92,7 +100,7 @@ layout: default
 
           <div class="row">
             <div class="col-md-12 get-sm">
-              <h3><br><strong><u>Features</u></strong></h3>
+              <h3 id="with_features"></h3>
             </div>
           </div>
           <div class="row">
@@ -190,6 +198,7 @@ layout: default
 <div class="row">
   <div class="col-md-4">
     <h4>Find Chicago Public Gardens Near You</h4><br>
+
     <p><strong>By Address:</strong></p>
     <div class="form-group">
       <input class='form-control' id='search-address' placeholder='Enter an address or intersection' type='text'>
