Update modal size/alignment

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
 </style>
 
 <div class="modal fade bd-example-modal-md" id="modal-pop" tabindex="-1" role="dialog">
-  <div class="modal-dialog modal-md">
+  <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close close-btn" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fa fa-times-circle" aria-hidden="true"></i></span></button>
@@ -66,127 +66,91 @@ layout: default
             <div class="col-md-12 get-sm">
               <h3 id="with_about"></h3>
             </div>
-          </div>
-          <div class="row">
+          </div>          
             <div class="col-md-12 get-sm">
               <h4 id="owner-header"></h4>
               <div id="owner-subsection"></div>
-            </div>
-          </div>
-          <div class="row">
+            </div>          
             <div class="col-md-12 get-sm">
               <h4 id="support-header"></h4>
               <div id="support-subsection"></div>
-            </div>
-          </div>
-          <div class="row">
+            </div>          
             <div class="col-md-12 get-sm">
               <h4 id="types-header"></h4>
               <div id="types-subsection"></div>
-            </div>
-          </div>
-          <div class="row">
+            </div>          
             <div class="col-md-12 get-sm">
               <h4 id="description-header"></h4>
               <div id="description-subsection"></div>
-            </div>
-          </div>
-          <div class="row">
+            </div>       
             <div class="col-md-12 get-sm">
               <h4 id="dormant-header"></h4>
               <div id="dormant-subsection"></div>
             </div>
-          </div>
 
           <div class="row">
             <div class="col-md-12 get-sm">
               <h3 id="with_features"></h3>
             </div>
           </div>
-          <div class="row">
             <div class="col-md-12 get-sm">
               <h4 id="production-header"></h4>
               <div id="production-subsection"></div>
             </div>
-          </div>
-          <div class="row">
             <div class="col-md-12">
               <h4 id="community-header"></h4>
               <div id="community-subsection"></div>
             </div>
-          </div>
-          <div class="row">
             <div class="col-md-12 get-sm">
               <h4 id="commtype-header"></h4>
               <div id="commtype-subsection"></div>
             </div>
-          </div>
-          <div class="row">
             <div class="col-md-12 get-sm">
               <h4 id="fence-header"></h4>
               <div id="fence-subsection"></div>
             </div>
-          </div>
-          <div class="row">
             <div class="col-md-12 get-sm">
               <h4 id="locked-header"></h4>
               <div id="locked-subsection"></div>
             </div>
-          </div>
-          <div class="row">
             <div class="col-md-12 get-sm">
               <h4 id="water-header"></h4>
               <div id="water-subsection"></div>
             </div>
-          </div>    
-          <div class="row">
             <div class="col-md-12 get-sm">
               <h4 id="compost-header"></h4>
               <div id="compost-subsection"></div>
             </div>
-          </div>
-          <div class="row">
             <div class="col-md-12 get-sm">
               <h4 id="seasonex-header"></h4>
               <div id="seasonex-subsection"></div>
             </div>
-          </div>
-          <div class="row">
             <div class="col-md-12 get-sm">
               <h4 id="structures-header"></h4>
               <div id="structures-subsection"></div>
             </div>
-          </div>
-          <div class="row">
             <div class="col-md-12 get-sm">
               <h4 id="animal-header"></h4>
               <div id="animal-subsection"></div>
             </div>
-          </div>
 
           <div class="row">
             <div class="col-md-12 get-sm">
               <h3 id="with_contact"></h3>
             </div>
           </div>
-          <div class="row">
             <div class="col-md-12 get-sm">
               <h4 id="contact-header"></h4>
               <div id="contact-subsection"></div>
             </div>
-          </div>
-          <div class="row">
             <div class="col-md-12 get-sm">
               <h4 id="website-header"></h4>
               <div id="website-subsection"></div>
             </div>
-          </div>
-          <div class="row">
             <div class="col-md-12 get-sm">
               <h4 id="facebook-header"></h4>
               <div id="facebook-subsection"></div>
             </div>
-          </div>
 
         </div>
       </div>
