--- a/index.html
+++ b/index.html
@@ -37,119 +37,77 @@ layout: default
           <div class="row">
             <div class="col-md-12 get-sm">
               <div id="modal-main"></div>
-              </div>
+              <dl>
+                <dt><div id="description-header"></div></dt>
+                <dd><div id="description-subsection"></div></dd>
+              </dl>
             </div>
+          </div>
           <div class="col-md-4 hidden-xs hidden-s" id="modal-image"></div>
-        </div>
-
-          <div class="row">
-            <div class="col-md-12 get-sm">
-              <h3 id="with_location"></h3>
-            </div>
-          </div>
-        <div class="row">
-          <div class="col-md-12 get-sm">
-            <h4 id="commarea-header"></h4>
-            <div id="commarea-subsection"></div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 get-sm">
-            <h4 id="ward-header"></h4>
-            <div id="ward-subsection"></div>
-          </div>
         </div>
 
       <div class="row modal-bottom">
         <div class="col-md-12">
-          <div class="row">
             <div class="col-md-12 get-sm">
-              <h3 id="with_about"></h3>
-            </div>
-          </div>          
-            <div class="col-md-12 get-sm">
-              <h4 id="owner-header"></h4>
-              <div id="owner-subsection"></div>
-            </div>          
-            <div class="col-md-12 get-sm">
-              <h4 id="support-header"></h4>
-              <div id="support-subsection"></div>
-            </div>          
-            <div class="col-md-12 get-sm">
-              <h4 id="types-header"></h4>
-              <div id="types-subsection"></div>
-            </div>          
-            <div class="col-md-12 get-sm">
-              <h4 id="description-header"></h4>
-              <div id="description-subsection"></div>
-            </div>       
-            <div class="col-md-12 get-sm">
-              <h4 id="dormant-header"></h4>
-              <div id="dormant-subsection"></div>
-            </div>
+              <br>
+              <dl class="dl-horizontal">
+                <dt><div id="commarea-header"></div></dt>
+                <dd><div id="commarea-subsection"></div></dd>
 
-          <div class="row">
-            <div class="col-md-12 get-sm">
-              <h3 id="with_features"></h3>
-            </div>
-          </div>
-            <div class="col-md-12 get-sm">
-              <h4 id="production-header"></h4>
-              <div id="production-subsection"></div>
-            </div>
-            <div class="col-md-12">
-              <h4 id="community-header"></h4>
-              <div id="community-subsection"></div>
-            </div>
-            <div class="col-md-12 get-sm">
-              <h4 id="commtype-header"></h4>
-              <div id="commtype-subsection"></div>
-            </div>
-            <div class="col-md-12 get-sm">
-              <h4 id="fence-header"></h4>
-              <div id="fence-subsection"></div>
-            </div>
-            <div class="col-md-12 get-sm">
-              <h4 id="locked-header"></h4>
-              <div id="locked-subsection"></div>
-            </div>
-            <div class="col-md-12 get-sm">
-              <h4 id="water-header"></h4>
-              <div id="water-subsection"></div>
-            </div>
-            <div class="col-md-12 get-sm">
-              <h4 id="compost-header"></h4>
-              <div id="compost-subsection"></div>
-            </div>
-            <div class="col-md-12 get-sm">
-              <h4 id="seasonex-header"></h4>
-              <div id="seasonex-subsection"></div>
-            </div>
-            <div class="col-md-12 get-sm">
-              <h4 id="structures-header"></h4>
-              <div id="structures-subsection"></div>
-            </div>
-            <div class="col-md-12 get-sm">
-              <h4 id="animal-header"></h4>
-              <div id="animal-subsection"></div>
-            </div>
+                <dt><div id="ward-header"></div></dt>
+                <dd><div id="ward-subsection"></div></dd>
 
-          <div class="row">
-            <div class="col-md-12 get-sm">
-              <h3 id="with_contact"></h3>
-            </div>
-          </div>
-            <div class="col-md-12 get-sm">
-              <h4 id="contact-header"></h4>
-              <div id="contact-subsection"></div>
-            </div>
-            <div class="col-md-12 get-sm">
-              <h4 id="website-header"></h4>
-              <div id="website-subsection"></div>
-            </div>
-            <div class="col-md-12 get-sm">
-              <h4 id="facebook-header"></h4>
-              <div id="facebook-subsection"></div>
+                <dt><div id="owner-header"></div></dt>
+                <dd><div id="owner-subsection"></div></dd>
+<!---->
+                <dt><div id="support-header"></div></dt>
+                <dd><div id="support-subsection"></div></dd>
+
+                <dt><div id="types-header"></div></dt>
+                <dd><div id="types-subsection"></div></dd>
+
+                <dt><div id="dormant-header"></div></dt>
+                <dd><div id="dormant-subsection"></div></dd>
+
+                <dt><div id="production-header"></div></dt>
+                <dd><div id="production-subsection"></div></dd>
+
+                <dt><div id="community-header"></div></dt>
+                <dd><div id="community-subsection"></div></dd>
+<!---->
+                <dt><div id="commtype-header"></div></dt>
+                <dd><div id="commtype-subsection"></div></dd>
+
+                <dt><div id="fence-header"></div></dt>
+                <dd><div id="fence-subsection"></div></dd>
+
+                <dt><div id="locked-header"></div></dt>
+                <dd><div id="locked-subsection"></div></dd>
+
+                <dt><div id="water-header"></div></dt>
+                <dd><div id="water-subsection"></div></dd>
+
+                <dt><div id="compost-header"></div></dt>
+                <dd><div id="compost-subsection"></div></dd>
+<!---->
+                <dt><div id="seasonex-header"></div></dt>
+                <dd><div id="seasonex-subsection"></div></dd>
+<!---->
+                <dt><div id="structures-header"></div></dt>
+                <dd><div id="structures-subsection"></div></dd>
+
+                <dt><div id="animal-header"></div></dt>
+                <dd><div id="animal-subsection"></div></dd>
+
+                <dt><div id="contact-header"></div></dt>
+                <dd><div id="contact-subsection"></div></dd>
+
+                <dt><div id="website-header"></div></dt>
+                <dd><div id="website-subsection"></div></dd>
+
+                <dt><div id="facebook-header"></div></dt>
+                <dd><div id="facebook-subsection"></div></dd>
+              </dl>
             </div>
 
         </div>
