--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@ layout: default
 
 <style id="carto-overlay-style">
   #carto-overlay {
-    polygon-line-color: '#000';
-    line-width: 1.7;
-    line-opacity: 1;
+    polygon-fill: #8A2B85;
+    polygon-opacity: 0.35;
+    line-color: #000;
+    line-width: 1;
   }
 </style>
 
@@ -135,7 +136,7 @@ layout: default
         <option value='8050'>5 miles</option>
       </select>
     </div>
-    <p><strong>By Neighborhood:</strong></p>
+    <p><strong>By Community Area:</strong></p>
     <div class="input-group select2-bootstrap-prepend m-top-sm">
       <span class="input-group-addon"><i class="fa fa-street-view fa-fw" aria-hidden="true"></i></span>
       <select class="data-array-neighborhood form-control" id="search-neighborhood" multiple="multiple"></select>
