Add county district filter

--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@ layout: default
       <span class="input-group-addon"><i class="fa fa-university fa-fw" aria-hidden="true"></i></span>
       <select class="data-array-ward form-control" id="search-ward" multiple="multiple"></select>
     </div>
+    <br><p><strong>By Cook County District:</strong></p>
+    <div class="input-group select2-bootstrap-prepend m-top-sm">
+      <span class="input-group-addon"><i class="fa fa-gavel fa-fw" aria-hidden="true"></i></span>
+      <select class="data-array-district form-control" id="search-district" multiple="multiple"></select>
+    </div>
 
     <br><br><p><strong>Refine Your Search</strong><br>You can pick more than option for owner.</p>
 
