Replace community garden filter with garden type

--- a/index.html
+++ b/index.html
@@ -158,16 +158,11 @@ layout: default
       <span class="input-group-addon"><i class="fa fa-usd fa-fw" aria-hidden="true"></i></span>
       <select class="data-array-ownership form-control" id="search-ownership" multiple="multiple"></select>
     </div>
+    <div class="input-group select2-bootstrap-prepend m-top-sm">
+      <span class="input-group-addon"><i class="fa fa-tags fa-fw" aria-hidden="true"></i></span>
+      <select class="data-array-type form-control" id="search-type" multiple="multiple"></select>
+    </div>
     <div>
-      <div class="checkbox m-top-sm">
-        <label class="leaf-box">
-          <input type="checkbox" id="search-community">
-            <i class="fa fa-fw fa-circle-o unchecked"></i>
-            <i class="fa fa-fw fa-leaf checked" id="leafbox"></i>
-          Community Garden
-        </label>
-      </div>
-
       <div class="checkbox m-top-sm m-bottom-sm">
         <label class="leaf-box">
           <input type="checkbox" id="search-production">
