--- a/index.html
+++ b/index.html
@@ -176,11 +176,10 @@ layout: default
     <div>
       <button class='btn btn-primary' id="btnSearch"><i class='fa fa-search'></i> Search</button>
 
-      <a href="index.html" class='btn btn-reset' id="btnReset" data-toggle="tooltip" data-placement="bottom" title="Reset"><i class="fa fa-repeat" aria-hidden="true"></i></a>
-
       <button class='btn btn-change' id='btnViewMode' data-toggle='tooltip' data-placement="bottom" title='Change view'><i class='fa fa-list'></i></button>
-    </div>
 
+      <a href="index.html" class='btn btn-reset' id="btnReset" data-toggle="tooltip" data-placement="bottom" title="Reset"><i class="fa fa-repeat" aria-hidden="true"></i></a>
+    </div>
   </div>
 
   <div class="col-md-8">
@@ -191,9 +190,9 @@ layout: default
       <table class="table list-table table-striped">
         <thead>
           <tr>
-            <th class='hidden-xs'></th>
-            <th>Name</th>
+            <th>Garden</th>
             <th class='hidden-xs'>Location</th>
+            <th class='hidden-xs'></th>
           </tr>
         </thead>
         <tbody id='results-list'></tbody>
