Small UI modifications

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ layout: default
 
     <br>
 
-    <p><strong>Refine Your Search.</strong> Click on each filter to view a list. You can pick more than one.</p>
+    <p><strong>Refine Your Search.</strong> Click on each filter to view a list. You can pick more than one filter option.</p>
 
     <div class="input-group select2-bootstrap-prepend m-top-sm">
       <span class="input-group-addon"><i class="fa fa-usd fa-fw" aria-hidden="true"></i></span>
@@ -253,6 +253,8 @@ layout: default
         <tbody id='results-list'></tbody>
       </table>
     </div>
+
+    <br>
 
   </div>
 </div>
