Add a filter for structures

--- a/index.html
+++ b/index.html
@@ -217,6 +217,10 @@ layout: default
       <span class="input-group-addon"><i class="fa fa-tags fa-fw" aria-hidden="true"></i></span>
       <select class="data-array-type form-control" id="search-type" multiple="multiple"></select>
     </div>
+    <div class="input-group select2-bootstrap-prepend m-top-sm">
+      <span class="input-group-addon"><i class="fa fa-building-o" aria-hidden="true"></i> </span>
+      <select class="data-array-structure form-control" id="search-structure" multiple="multiple"></select>
+    </div>
     <div>
       <div class="checkbox m-top-sm m-bottom-sm">
         <label class="leaf-box">
