Add advanced dropdown and refactor CSS

--- a/index.html
+++ b/index.html
@@ -124,80 +124,83 @@ layout: default
 
     <p><strong>Search by location.</strong> Choose one location option.</p>
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingOne">
-          <h4 class="panel-title">
-            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Address <i class="fa fa-caret-down" aria-hidden="true"></i>
-            </a>
-          </h4>
-        </div>
-        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-          <div class="panel-body">
-            <div class="form-group">
-              <input class='form-control' id='search-address' placeholder='Enter an address or intersection' type='text'>
-            </div>
-            <div class='form-group'>
-              <select id='search-radius' class='form-control'>
-                <option value="" selected disabled="">Within:</option>
-                <option value='400'>2 blocks</option>
-                <option value='805'>1/2 mile</option>
-                <option value='1610' selected="selected">1 mile</option>
-                <option value='3220'>2 miles</option>
-                <option value='8050'>5 miles</option>
-              </select>
-            </div>
+
+      <div role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingOne">
+            <h4 class="panel-title">
+                Address <i class="fa fa-caret-down" aria-hidden="true"></i>
+            </h4>
           </div>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingTwo">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Community Area <i class="fa fa-caret-down" aria-hidden="true"></i>
-            </a>
-          </h4>
-        </div>
-        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-          <div class="panel-body">
-            <div class="input-group select2-bootstrap-prepend">
-              <span class="input-group-addon"><i class="fa fa-street-view fa-fw" aria-hidden="true"></i></span>
-              <select class="data-array-neighborhood form-control" id="search-neighborhood" multiple="multiple"></select>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingThree">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Ward <i class="fa fa-caret-down" aria-hidden="true"></i>
-            </a>
-          </h4>
-        </div>
-        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-          <div class="panel-body">
-            <div class="input-group select2-bootstrap-prepend">
-              <span class="input-group-addon"><i class="fa fa-university fa-fw" aria-hidden="true"></i></span>
-              <select class="data-array-ward form-control" id="search-ward" multiple="multiple"></select>
+          <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+            <div class="panel-body">
+              <div class="form-group">
+                <input class='form-control' id='search-address' placeholder='Enter an address or intersection' type='text'>
+              </div>
+              <div class='form-group'>
+                <select id='search-radius' class='form-control'>
+                  <option value="" selected disabled="">Within:</option>
+                  <option value='400'>2 blocks</option>
+                  <option value='805'>1/2 mile</option>
+                  <option value='1610' selected="selected">1 mile</option>
+                  <option value='3220'>2 miles</option>
+                  <option value='8050'>5 miles</option>
+                </select>
+              </div>
             </div>
           </div>
         </div>
       </div>
 
-       <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingFour">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-              Cook County District <i class="fa fa-caret-down" aria-hidden="true"></i>
-            </a>
-          </h4>
+      <div class="collapsed m-top-xs" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingTwo">
+            <h4 class="panel-title">
+                Community Area <i class="fa fa-caret-down" aria-hidden="true"></i>
+            </h4>
+          </div>
+          <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+            <div class="panel-body">
+              <div class="input-group select2-bootstrap-prepend">
+                <span class="input-group-addon"><i class="fa fa-street-view fa-fw" aria-hidden="true"></i></span>
+                <select class="data-array-neighborhood form-control" id="search-neighborhood" multiple="multiple"></select>
+              </div>
+            </div>
+          </div>
         </div>
-        <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-          <div class="panel-body">
-            <div class="input-group select2-bootstrap-prepend">
-              <span class="input-group-addon"><i class="fa fa-gavel fa-fw" aria-hidden="true"></i></span>
-              <select class="data-array-district form-control" id="search-district" multiple="multiple"></select>
+      </div>
+
+      <div class="collapsed m-top-xs" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingThree">
+            <h4 class="panel-title">
+              Ward <i class="fa fa-caret-down" aria-hidden="true"></i>
+            </h4>
+          </div>
+          <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+            <div class="panel-body">
+              <div class="input-group select2-bootstrap-prepend">
+                <span class="input-group-addon"><i class="fa fa-university fa-fw" aria-hidden="true"></i></span>
+                <select class="data-array-ward form-control" id="search-ward" multiple="multiple"></select>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+       <div class="collapsed m-top-xs" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+         <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingFour">
+            <h4 class="panel-title">
+              Cook County District <i class="fa fa-caret-down" aria-hidden="true"></i>
+            </h4>
+          </div>
+          <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+            <div class="panel-body">
+              <div class="input-group select2-bootstrap-prepend">
+                <span class="input-group-addon"><i class="fa fa-gavel fa-fw" aria-hidden="true"></i></span>
+                <select class="data-array-district form-control" id="search-district" multiple="multiple"></select>
+              </div>
             </div>
           </div>
         </div>
@@ -207,36 +210,50 @@ layout: default
 
     <br>
 
-    <p><strong>Refine Your Search.</strong> Click on each filter to view a list. You can pick more than one filter option.</p>
+    <p><strong>Advanced Search.</strong> See more options, and refine search results.</p>
 
-    <div class="input-group select2-bootstrap-prepend m-top-sm">
-      <span class="input-group-addon"><i class="fa fa-usd fa-fw" aria-hidden="true"></i></span>
-      <select class="data-array-ownership form-control" id="search-ownership" multiple="multiple"></select>
-    </div>
-    <div class="input-group select2-bootstrap-prepend m-top-sm">
-      <span class="input-group-addon"><i class="fa fa-tags fa-fw" aria-hidden="true"></i></span>
-      <select class="data-array-type form-control" id="search-type" multiple="multiple"></select>
-    </div>
-    <div class="input-group select2-bootstrap-prepend m-top-sm">
-      <span class="input-group-addon"><i class="fa fa-building-o" aria-hidden="true"></i> </span>
-      <select class="data-array-structure form-control" id="search-structure" multiple="multiple"></select>
-    </div>
-    <div>
-      <div class="checkbox m-top-sm m-bottom-sm">
-        <label class="leaf-box">
-          <input type="checkbox" id="search-production">
-            <i class="fa fa-fw fa-circle-o unchecked"></i>
-            <i class="fa fa-fw fa-leaf checked" id="leafbox"></i>
-          Food Producing
-        </label>
-      </div>
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+      <div class="panel panel-default">
+        <div data-toggle="collapse" data-parent="#accordion" href="#advancedSearch" aria-expanded="true" aria-controls="advancedSearch">
+          <div class="panel-heading" role="tab" id="headingOne">
+            <h4 class="panel-title">
+                <i class="fa fa-caret-down" aria-hidden="true"></i>
+            </h4>
+          </div>
+        </div>
+        <div id="advancedSearch" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+          <div class="panel-body">
+            <p>Click on each filter to view a list. You can pick more than one filter option.</p>
+            <div class="input-group select2-bootstrap-prepend m-top-sm">
+              <span class="input-group-addon"><i class="fa fa-usd fa-fw" aria-hidden="true"></i></span>
+              <select class="data-array-ownership form-control" id="search-ownership" multiple="multiple"></select>
+            </div>
+            <div class="input-group select2-bootstrap-prepend m-top-sm">
+              <span class="input-group-addon"><i class="fa fa-tags fa-fw" aria-hidden="true"></i></span>
+              <select class="data-array-type form-control" id="search-type" multiple="multiple"></select>
+            </div>
+            <div class="input-group select2-bootstrap-prepend m-top-sm">
+              <span class="input-group-addon"><i class="fa fa-building-o" aria-hidden="true"></i> </span>
+              <select class="data-array-structure form-control" id="search-structure" multiple="multiple"></select>
+            </div>
+            <div>
+              <div class="checkbox m-top-sm m-bottom-sm">
+                <label class="leaf-box">
+                  <input type="checkbox" id="search-production">
+                    <i class="fa fa-fw fa-circle-o unchecked"></i>
+                    <i class="fa fa-fw fa-leaf checked" id="leafbox"></i>
+                  Click to filter for 'Food producing' gardens
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>    
     </div>
 
     <div>
       <button class='btn btn-primary' id="btnSearch"><i class='fa fa-search'></i> Search</button>
-
       <button class='btn btn-change' id='btnViewMode' data-toggle='tooltip' data-placement="bottom" title='Change view'><i class='fa fa-list'></i></button>
-
       <a href="index.html" class='btn btn-reset' id="btnReset" data-toggle="tooltip" data-placement="bottom" title="Reset"><i class="fa fa-repeat" aria-hidden="true"></i></a>
     </div>
   </div>
