--- a/index.html
+++ b/index.html
@@ -242,10 +242,23 @@ layout: default
                   <input type="checkbox" id="search-production">
                     <i class="fa fa-fw fa-circle-o unchecked"></i>
                     <i class="fa fa-fw fa-leaf checked" id="leafbox"></i>
-                  Click to filter for 'Food producing' gardens
+                    Food producing
                 </label>
               </div>
             </div>
+
+            <div>
+              <div class="checkbox m-top-sm m-bottom-sm">
+                <label class="leaf-box">
+                  <input type="checkbox" id="search-compost">
+                    <i class="fa fa-fw fa-circle-o unchecked"></i>
+                    <i class="fa fa-fw fa-leaf checked" id="leafbox"></i>
+                    Compost system
+                </label>
+              </div>
+            </div>
+
+
           </div>
         </div>
       </div>    
