--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ layout: default
       <button class='btn btn-change' id='btnViewMode' data-toggle='tooltip' data-placement="bottom" title='Change view'><i class='fa fa-list'></i></button>
       <a href="index.html" class='btn btn-reset' id="btnReset" data-toggle="tooltip" data-placement="bottom" title="Reset"><i class="fa fa-repeat" aria-hidden="true"></i></a>
 
-      <button class='btn btn-change' id='btnCSVDownload' data-toggle='tooltip' data-placement="bottom" title='Download results'><i class='fa fa-list'></i> Download</button>
+      <button class='btn btn-change' id='btnCSVDownload' data-toggle='tooltip' data-placement="bottom" title='Download results'><i class="fa fa-download" aria-hidden="true"></i> Download</button>
     </div>
   </div>
 
