Move 'Advanced search'. Closes #36

--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@ layout: default
 
     <br>
 
-    <p><strong>Advanced Search.</strong> See more options, and refine search results.</p>
+    <p><strong>Refine and filter</strong> your search results.</p>
 
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default">
         <div data-toggle="collapse" data-parent="#accordion" href="#advancedSearch" aria-expanded="true" aria-controls="advancedSearch">
           <div class="panel-heading" role="tab" id="headingOne">
             <h4 class="panel-title">
-                <i class="fa fa-caret-down" aria-hidden="true"></i>
+                <i class="fa fa-caret-down" aria-hidden="true"></i> Advanced Search
             </h4>
           </div>
         </div>
