Show address panel by default. Closes #41.

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ layout: default
                 Address <i class="fa fa-caret-down" aria-hidden="true"></i>
             </h4>
           </div>
-          </div>
-        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+        </div>
+        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
           <div class="panel-body">
             <div class="form-group">
               <input class='form-control' id='search-address' placeholder='Enter an address or intersection' type='text'>
