Fix panel IDs to preserve location search

--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@ layout: default
 
     <p><strong>Refine and filter</strong> your search results.</p>
 
-    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="panel-group" id="keytar" role="tablist" aria-multiselectable="true">
       <div class="panel panel-default">
-        <div data-toggle="collapse" data-parent="#accordion" href="#advancedSearch" aria-expanded="true" aria-controls="advancedSearch">
+        <div data-toggle="collapse" data-parent="#keytar" href="#advancedSearch" aria-expanded="true" aria-controls="advancedSearch">
           <div class="panel-heading" role="tab" id="headingOne">
             <h4 class="panel-title">
                 <i class="fa fa-caret-down" aria-hidden="true"></i> Advanced Search
