Add an option to filter for dormant sites

--- a/index.html
+++ b/index.html
@@ -270,6 +270,17 @@ layout: default
               </div>
             </div>
 
+            <div>
+              <div class="checkbox m-top-sm m-bottom-sm">
+                <label class="leaf-box">
+                  <input type="checkbox" id="search-dormant">
+                    <i class="fa fa-fw fa-circle-o unchecked"></i>
+                    <i class="fa fa-fw fa-leaf checked" id="leafbox"></i>
+                    Dormant 
+                </label>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>    
