--- a/index.html
+++ b/index.html
@@ -25,98 +25,7 @@ layout: default
   }
 </style>
 
-<div class="modal fade bd-example-modal-md" id="modal-pop" tabindex="-1" role="dialog">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close close-btn" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fa fa-times-circle" aria-hidden="true"></i></span></button>
-        <h4 class="modal-title" id="modal-title"></h4>
-      </div>
-
-      <div class="modal-body">
-        <div class="container-fluid bd-example-row">
-          <div class="row">
-            <div class="col-md-12 get-sm">
-              <div id="modal-main"></div>
-              <dl>
-                <dt><div id="description-header"></div></dt>
-                <dd><div id="description-subsection"></div></dd>
-              </dl>
-            </div>
-          </div>
-          <div class="col-md-4 hidden-xs hidden-s" id="modal-image"></div>
-        </div>
-
-      <div class="row modal-bottom">
-        <div class="col-md-12">
-            <div class="col-md-12 get-sm">
-              <br>
-              <dl class="dl-horizontal">
-                <dt><div id="commarea-header"></div></dt>
-                <dd><div id="commarea-subsection"></div></dd>
-
-                <dt><div id="ward-header"></div></dt>
-                <dd><div id="ward-subsection"></div></dd>
-
-                <dt><div id="owner-header"></div></dt>
-                <dd><div id="owner-subsection"></div></dd>
-<!---->
-                <dt><div id="support-header"></div></dt>
-                <dd><div id="support-subsection"></div></dd>
-
-                <dt><div id="types-header"></div></dt>
-                <dd><div id="types-subsection"></div></dd>
-
-                <dt><div id="dormant-header"></div></dt>
-                <dd><div id="dormant-subsection"></div></dd>
-
-                <dt><div id="production-header"></div></dt>
-                <dd><div id="production-subsection"></div></dd>
-
-                <dt><div id="community-header"></div></dt>
-                <dd><div id="community-subsection"></div></dd>
-<!---->
-                <dt><div id="commtype-header"></div></dt>
-                <dd><div id="commtype-subsection"></div></dd>
-
-                <dt><div id="fence-header"></div></dt>
-                <dd><div id="fence-subsection"></div></dd>
-
-                <dt><div id="locked-header"></div></dt>
-                <dd><div id="locked-subsection"></div></dd>
-
-                <dt><div id="water-header"></div></dt>
-                <dd><div id="water-subsection"></div></dd>
-
-                <dt><div id="compost-header"></div></dt>
-                <dd><div id="compost-subsection"></div></dd>
-<!---->
-                <dt><div id="seasonex-header"></div></dt>
-                <dd><div id="seasonex-subsection"></div></dd>
-<!---->
-                <dt><div id="structures-header"></div></dt>
-                <dd><div id="structures-subsection"></div></dd>
-
-                <dt><div id="animal-header"></div></dt>
-                <dd><div id="animal-subsection"></div></dd>
-
-                <dt><div id="contact-header"></div></dt>
-                <dd><div id="contact-subsection"></div></dd>
-
-                <dt><div id="website-header"></div></dt>
-                <dd><div id="website-subsection"></div></dd>
-
-                <dt><div id="facebook-header"></div></dt>
-                <dd><div id="facebook-subsection"></div></dd>
-              </dl>
-            </div>
-
-        </div>
-      </div>
-      </div>
-    </div>
-  </div>
-</div>
+{% include modal.html %}
 
 <div class="row">
   <div class="col-md-4">
