Add search bar for garden name

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@ layout: default
 
     <p><strong>Search by location.</strong> Choose one location option.</p>
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-
       <div class="panel panel-default m-top-xs">
         <div role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
           <div class="panel-heading" role="tab" id="headingOne">
@@ -79,7 +78,6 @@ layout: default
         </div>
       </div>
       
-
       <div class="panel panel-default m-top-xs">
         <div class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
           <div class="panel-heading" role="tab" id="headingThree">
@@ -117,6 +115,9 @@ layout: default
       </div>
 
     </div>
+
+    <p><strong>Know the garden name?</strong> Enter it here.</p>
+    <input class='form-control' id='search-name' placeholder='Enter a garden name or keyword' type='text'>
 
     <br>
 
