--- a/compost.html
+++ b/compost.html
@@ -4,7 +4,10 @@ layout: default
 <div class='row'>
   <div class="col-md-12">
     <h2><strong>Compost registration</strong></h2>
-    <h3>Please read before completing the compost registration.</h3>
+    <h3>What you need to know</h3>
+    <p>Before you can register your garden for composting, the <strong>garden must appear in the CUAMP database</strong>. Complete <a href="/add.html">this form</a> to register a new garden. If you already registered your garden, then <a href="/">search for your garden by name</a>, and retrieve its unique ID: you need this ID to complete the composting form.</p>
+    <p>If you plan to accept off-site waste, then you are legally obligated to register your garden for composting. However, you do not need to register your garden to compost.</p>
+    <h3>New municipal code in Chicago</h3>
     <p><a href="http://library.amlegal.com/nxt/gateway.dll/Illinois/chicago_il/title7healthandsafety/chapter7-28healthnuisances?f=templates$fn=default.htm$3.0$vid=amlegal:chicago_il$anc=JD_7-28-715" target="_blank">Section 7-28-715(3)(iii)</a> of the Municipal Code of Chicago, and <a href="https://www.cityofchicago.org/city/en/depts/dol/rules-and-regulations-portal.html">the Rules for Garden Composting Operations</a>, require garden composting operators to register on-line by April 1st of every year. In addition, the operator must keep the information current by updating the registration within 14 days of any change.</p>
     <p>Answering the questions on the compost form will fulfill your registration obligation. If you have any questions regarding your registration, please send an email to <a href="mailto:gardencomposting@cityofchicago.org">gardencomposting@cityofchicago.org</a>.</p>
   </div>
