Change text and update fitlers for communities

--- a/add.html
+++ b/add.html
@@ -4,7 +4,7 @@ layout: default
 <div class='row'>
   <div class="col-md-12 location">
     <h2><strong>Add or edit a new location</strong></h2>
-    <h4>Do you know an awesome community garden that we don't have listed? Do you need to update your current garden? Use this form to tell us about it.</h4>
+    <h4>Do you know an awesome community garden or growing space? Do you need to update your current garden? Use this form to tell us about it.</h4>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd0uaC2TsH7PnW4YXu4DAApmR1ohKrxEixcaA_oJPRi5FWDvg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
   </div>
 </div>
