--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
 
 <div class="row">
   <div class="col-md-4">
-    <h4>Find Chicago Public Gardens Near You</h4><br>
+    <h4>Find a Growing Space Near You</h4><br>
 
     <p><strong>Search by location.</strong> Choose one location option.</p>
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
